%% Splitnorder - ER Diyagramı (users / jobs / stems)
erDiagram
    USERS ||--o{ JOBS : "1—N"
    JOBS  ||--o{ STEMS : "1—N"

    USERS {
        BIGINT       id PK
        VARCHAR      username UK
        VARCHAR      email UK
        VARCHAR      password_hash
        VARCHAR      auth_provider "LOCAL | GOOGLE"
        VARCHAR      google_id UK
        VARCHAR      profile_picture_url
        BOOLEAN      email_verified
        VARCHAR      verification_token
        DATETIME     verification_token_expiry
        DATETIME     created_at
        DATETIME     updated_at
    }

    JOBS {
        BIGINT       id PK
        BIGINT       user_id FK
        VARCHAR      original_filename
        VARCHAR      original_file_path
        VARCHAR      status "PENDING|PROCESSING|COMPLETED|FAILED"
        VARCHAR      model_used
        DATETIME     created_at
        DATETIME     completed_at
        VARCHAR      error_message
    }

    STEMS {
        BIGINT       id PK
        BIGINT       job_id FK
        VARCHAR      stem_type "vocals|drums|bass|other"
        VARCHAR      file_path
        BIGINT       file_size
        VARCHAR      download_url
    }
